service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codbex-hestia
  labels:
    app: codbex-hestia
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: codbex-hestia
  type: ClusterIP
